# rt-weekend

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt
01_ppm/: CMakeLists.txt  main.cpp
02_camera/: CMakeLists.txt  camera.cpp
03_sphere/: CMakeLists.txt  sphere.cpp
04_surface_normals/: CMakeLists.txt  surface_normals.cpp
05_world/: CMakeLists.txt  world.cpp
include/: camera.h  camera.hpp  color.h  color.hpp  hittable.h  hittable.hpp  hittable_list.h  hittable_list.hpp  interval.h  interval.hpp  ray.hpp  sphere.h  sphere.hpp  utils.hpp  vec3.h  vec3.hpp
